output/terraform/instances.tf

resource "google_compute_instance" "host_224_0_0_22" {
  name         = "host-224_0_0_22"
  machine_type = "e2-medium"
  zone         = "us-central1-a"
  tags         = ["ssh", "server", "224_0_0_22"]

  boot_disk {
    initialize_params {
      image = "debian-cloud/debian-11"
    }
  }

  network_interface {
    network    = google_compute_network.main_network.name
    subnetwork = google_compute_subnetwork.subnet-2.name
    
    access_config {
      // Ephemeral IP
    }
  }

  metadata_startup_script = <<-EOT

  EOT

  metadata = {
    role = "SERVER"
    original_ip = "224.0.0.22"
  }
}

resource "google_compute_instance" "host_185_175_0_8" {
  name         = "host-185_175_0_8"
  machine_type = "e2-micro"
  zone         = "us-central1-a"
  tags         = ["ssh", "185_175_0_8"]

  boot_disk {
    initialize_params {
      image = "debian-cloud/debian-11"
    }
  }

  network_interface {
    network    = google_compute_network.main_network.name
    subnetwork = google_compute_subnetwork.subnet-1.name
    
    access_config {
      // Ephemeral IP
    }
  }

  metadata_startup_script = <<-EOT

  EOT

  metadata = {
    role = "GATEWAY"
    original_ip = "185.175.0.8"
  }
}

resource "google_compute_instance" "host_185_175_0_3" {
  name         = "host-185_175_0_3"
  machine_type = "e2-micro"
  zone         = "us-central1-a"
  tags         = ["ssh", "185_175_0_3"]

  boot_disk {
    initialize_params {
      image = "debian-cloud/debian-11"
    }
  }

  network_interface {
    network    = google_compute_network.main_network.name
    subnetwork = google_compute_subnetwork.subnet-1.name
    
    access_config {
      // Ephemeral IP
    }
  }

  metadata_startup_script = <<-EOT

  EOT

  metadata = {
    role = "CLIENT"
    original_ip = "185.175.0.3"
  }
}

resource "google_compute_instance" "host_185_175_0_1" {
  name         = "host-185_175_0_1"
  machine_type = "e2-micro"
  zone         = "us-central1-a"
  tags         = ["ssh", "185_175_0_1"]

  boot_disk {
    initialize_params {
      image = "debian-cloud/debian-11"
    }
  }

  network_interface {
    network    = google_compute_network.main_network.name
    subnetwork = google_compute_subnetwork.subnet-1.name
    
    access_config {
      // Ephemeral IP
    }
  }

  metadata_startup_script = <<-EOT

  EOT

  metadata = {
    role = "CLIENT"
    original_ip = "185.175.0.1"
  }
}

resource "google_compute_instance" "host_185_175_0_5" {
  name         = "host-185_175_0_5"
  machine_type = "e2-micro"
  zone         = "us-central1-a"
  tags         = ["ssh", "plc", "185_175_0_5"]

  boot_disk {
    initialize_params {
      image = "debian-cloud/debian-11"
    }
  }

  network_interface {
    network    = google_compute_network.main_network.name
    subnetwork = google_compute_subnetwork.subnet-1.name
    
    access_config {
      // Ephemeral IP
    }
  }

  metadata_startup_script = <<-EOT

                    apt-get update
                    apt-get install -y python3-pip
                    pip3 install pymodbus
                    # Script per emulare un PLC Modbus
                    cat <<EOF > /usr/local/bin/modbus_emulator.py
#!/usr/bin/env python3
from pymodbus.server.sync import StartTcpServer
from pymodbus.datastore import ModbusSequentialDataBlock, ModbusSlaveContext, ModbusServerContext
import logging
import time

logging.basicConfig()
log = logging.getLogger()
log.setLevel(logging.DEBUG)

# Configurazione del contesto del server
store = ModbusSlaveContext(
    di=ModbusSequentialDataBlock(0, [0]*100),
    co=ModbusSequentialDataBlock(0, [0]*100),
    hr=ModbusSequentialDataBlock(0, [0]*100),
    ir=ModbusSequentialDataBlock(0, [0]*100))
context = ModbusServerContext(slaves=store, single=True)

# Avvia il server
print("Avvio server Modbus TCP su porta 502")
StartTcpServer(context, address=("0.0.0.0", 502))
EOF
                    chmod +x /usr/local/bin/modbus_emulator.py
                    nohup /usr/local/bin/modbus_emulator.py &
                    
  EOT

  metadata = {
    role = "PLC_MODBUS"
    original_ip = "185.175.0.5"
  }
}

resource "google_compute_instance" "host_185_175_0_4" {
  name         = "host-185_175_0_4"
  machine_type = "e2-micro"
  zone         = "us-central1-a"
  tags         = ["ssh", "185_175_0_4"]

  boot_disk {
    initialize_params {
      image = "debian-cloud/debian-11"
    }
  }

  network_interface {
    network    = google_compute_network.main_network.name
    subnetwork = google_compute_subnetwork.subnet-1.name
    
    access_config {
      // Ephemeral IP
    }
  }

  metadata_startup_script = <<-EOT

  EOT

  metadata = {
    role = "GATEWAY"
    original_ip = "185.175.0.4"
  }
}

resource "google_compute_instance" "host_185_175_0_6" {
  name         = "host-185_175_0_6"
  machine_type = "e2-micro"
  zone         = "us-central1-a"
  tags         = ["ssh", "185_175_0_6"]

  boot_disk {
    initialize_params {
      image = "debian-cloud/debian-11"
    }
  }

  network_interface {
    network    = google_compute_network.main_network.name
    subnetwork = google_compute_subnetwork.subnet-1.name
    
    access_config {
      // Ephemeral IP
    }
  }

  metadata_startup_script = <<-EOT

  EOT

  metadata = {
    role = "GATEWAY"
    original_ip = "185.175.0.6"
  }
}

resource "google_compute_instance" "host_224_0_0_251" {
  name         = "host-224_0_0_251"
  machine_type = "e2-medium"
  zone         = "us-central1-a"
  tags         = ["ssh", "server", "224_0_0_251"]

  boot_disk {
    initialize_params {
      image = "debian-cloud/debian-11"
    }
  }

  network_interface {
    network    = google_compute_network.main_network.name
    subnetwork = google_compute_subnetwork.subnet-2.name
    
    access_config {
      // Ephemeral IP
    }
  }

  metadata_startup_script = <<-EOT

  EOT

  metadata = {
    role = "SERVER"
    original_ip = "224.0.0.251"
  }
}

resource "google_compute_firewall" "allow-185_175_0_8-ports" {
  name    = "allow-185_175_0_8-ports"
  network = google_compute_network.main_network.name

  allow {
    protocol = "tcp"
    ports    = ["60638", "59980", "59236", "60114", "60136", "58578", "60270", "59130", "59874", "58734", "58868", "58472", "58366", "60444", "59438", "59198", "60820", "58936", "60076", "60232", "59836", "58696", "58674", "58830", "59574", "58434", "60474", "59334", "58328", "60406", "60144", "60300", "59160", "59904", "60782", "58898", "59798", "59402", "58658", "59932", "59536", "58396", "59034", "60368", "60106", "58966", "60262", "59866", "60000", "58860", "58464", "60744", "60504", "59364" [...]
  }

  source_ranges = ["0.0.0.0/0"]
  target_tags   = ["185_175_0_8"]
}

resource "google_compute_firewall" "allow-185_175_0_5-ports" {
  name    = "allow-185_175_0_5-ports"
  network = google_compute_network.main_network.name

  allow {
    protocol = "tcp"
    ports    = ["502"]
  }

  source_ranges = ["0.0.0.0/0"]
  target_tags   = ["185_175_0_5"]
}

resource "google_compute_firewall" "allow-185_175_0_4-ports" {
  name    = "allow-185_175_0_4-ports"
  network = google_compute_network.main_network.name

  allow {
    protocol = "tcp"
    ports    = ["44342", "43946", "45018", "45174", "45152", "44912", "43772", "44516", "44650", "44254", "44672", "45394", "44410", "43510", "44148", "45048", "43908", "43646", "44874", "44478", "45356", "44612", "43472", "45378", "45116", "43976", "44372", "44216", "44110", "43870", "43608", "44942", "44680", "43540", "44440", "45340", "44178", "44574", "45474", "44334", "43938", "45318", "45078", "44816", "44072", "43676", "43570", "44448", "44904", "44642", "43502", "44402", "45146", "45280" [...]
  }

  source_ranges = ["0.0.0.0/0"]
  target_tags   = ["185_175_0_4"]
}

resource "google_compute_firewall" "allow-185_175_0_6-ports" {
  name    = "allow-185_175_0_6-ports"
  network = google_compute_network.main_network.name

  allow {
    protocol = "tcp"
    ports    = ["48222", "48198", "43682", "43748", "43710", "43686", "48156", "48200", "48160", "48226", "43734", "48162", "48228", "43740", "43676", "48192", "48152", "48196", "48218", "43730", "43706", "48154", "48220", "43666", "48158", "48180", "48224", "48184", "43668", "43736", "48182", "43762", "48186", "43696", "48188", "43724", "48214", "43726", "43702", "48150", "48216", "48176", "43664", "48178", "43732", "43716", "43692", "48206", "48274", "48210", "43694", "48208", "43678", "1099", [...]
  }

  source_ranges = ["0.0.0.0/0"]
  target_tags   = ["185_175_0_6"]
}

resource "google_compute_firewall" "allow-224_0_0_251-ports" {
  name    = "allow-224_0_0_251-ports"
  network = google_compute_network.main_network.name

  allow {
    protocol = "udp"
    ports    = ["5353"]
  }

  source_ranges = ["0.0.0.0/0"]
  target_tags   = ["224_0_0_251"]
}
